[package]

name = "jsonway"
version = "1.0.1"
authors = ["Stanislav Panferov <fnight.m@gmail.com>"]
description = "JSON building DSL and configurable serializers for Rust"
repository = "https://github.com/rustless/jsonway"
documentation = "http://rustless.org/rustless/doc/jsonway/"
keywords = ["json", "serializers"]
license = "MIT"

[dependencies]
serde = "1.0.2"
serde_json = "1.0.1"

[[test]]
name = "tests"
